test/error/iface/errHfsm3.rzy
// funcC is not an event

ErrHfsm3 = Component
  funcA : slot();
  funcB : slot();

hfsm(One)
  One : state;

  funcC = procedure()
  end
  
  One to One by funcA();
  One to One by funcB();
  One to One by funcC();
end

